v1.0.0/modules/schema/pages/class/CostPerEnergyUnit.adoc
= `CostPerEnergyUnit`
:toclevels: 4


+++Cost, in units of currency, per quantity of electrical energy generated.+++


[cols="h,3",width=60%]
|===
| Type
| CIM data type class


| URI
| `cim:CostPerEnergyUnit`


| CIM standard (perspective)
| IEC61970 (Grid)

|===

== Slots

[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| `value`
| 0..1
| https://w3id.org/linkml/Float[`float`]
//| +++None+++
| n/a

| `multiplier`
| 0..1
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
//| +++None+++
| n/a

| `unit`
| 0..1
| xref::enumeration/Currency.adoc[`Currency`]
//| +++None+++
| n/a
|===

////

'''


//[discrete]
[#multiplier]
=== `multiplier`


[cols="h,1",width=60%]
|===
| URI
| `cim:CostPerEnergyUnit.multiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
|===

//[discrete]
[#unit]
=== `unit`


[cols="h,1",width=60%]
|===
| URI
| `cim:CostPerEnergyUnit.unit`
| Cardinality
| 0..1
| Type
| xref::enumeration/Currency.adoc[`Currency`]
|===

//[discrete]
[#value]
=== `value`


[cols="h,1",width=60%]
|===
| URI
| `cim:CostPerEnergyUnit.value`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]
|===

////