v1.1.0/modules/schema/pages/class/CostPerEnergyUnit.adoc
= `CostPerEnergyUnit`
:toclevels: 4


+++Cost, in units of currency, per quantity of electrical energy generated.+++


[cols="h,3",width=60%]
|===
| Type
| CIM data type class


| URI
| `cim:CostPerEnergyUnit`


| CIM standard (perspective)
| IEC61970 (Grid)


|===

== Slots

[cols="1,1,2",width=100%]
|===
| Name | Type | Description

| `value`
| 0..1 +
https://w3id.org/linkml/Float[`float`]
//| +++None+++
| n/a

| `multiplier`
| 0..1 +
xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
//| +++None+++
| n/a

| `unit`
| 0..1 +
xref::enumeration/Currency.adoc[`Currency`]
//| +++None+++
| n/a
|===

////

'''


//[discrete]
[#multiplier]
=== `multiplier`


[cols="h,1",width=60%]
|===
| URI
| `cim:CostPerEnergyUnit.multiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
|===

//[discrete]
[#unit]
=== `unit`


[cols="h,1",width=60%]
|===
| URI
| `cim:CostPerEnergyUnit.unit`
| Cardinality
| 0..1
| Type
| xref::enumeration/Currency.adoc[`Currency`]
|===

//[discrete]
[#value]
=== `value`


[cols="h,1",width=60%]
|===
| URI
| `cim:CostPerEnergyUnit.value`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]
|===

////

== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/BidPriceCap.adoc[`BidPriceCap`] | xref::class/BidPriceCap.adoc#defaultPrice[`defaultPrice`]



| xref::class/ContractRight.adoc[`ContractRight`] | xref::class/ContractRight.adoc#contractPrice[`contractPrice`]



| xref::class/MPMTestThreshold.adoc[`MPMTestThreshold`] | xref::class/MPMTestThreshold.adoc#price[`price`]



| xref::class/PowerQualityPricing.adoc[`PowerQualityPricing`] | xref::class/PowerQualityPricing.adoc#valueUninterruptedServiceEnergy[`valueUninterruptedServiceEnergy`]



| xref::class/RegisteredControllableLoad.adoc[`RegisteredControllableLoad`] | xref::class/RegisteredControllableLoad.adoc#minLoadReductionCost[`minLoadReductionCost`]



| xref::class/RegisteredGenerator.adoc[`RegisteredGenerator`] | xref::class/RegisteredGenerator.adoc#operatingMaintenanceCost[`operatingMaintenanceCost`]



| xref::class/StartupModel.adoc[`StartupModel`] | xref::class/StartupModel.adoc#incrementalMaintCost[`incrementalMaintCost`]


|===

